test/fail/bad-shared-function-type.mo
type t = shared() -> async* (); // reject (shared function can't return async*)
